fixed some more alignment issues

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
 .our-story-image {
   padding-left: 70px;
   padding-right: 20px;
+  padding-top: 10%;
 }
 
 .our-story-text {
